--- a/content/hello-world.mdx
+++ b/content/hello-world.mdx
@@ -4,7 +4,7 @@ publishedAt: "2024-06-18"
 summary: "My first post on my new blog."
 ---
 
-Hi there!
+Aqui colocaremos todos as nossas histórias e aventuras!
 
 ```jsx
 console.log("Hello World");
