--- a/content/guimaraes.mdx
+++ b/content/guimaraes.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Passeio a Cidade do Berço"
-publishedAt: "2024-06-18"
-summary: "My second post on my new blog."
+title: 'Passeio a Cidade do Berço'
+publishedAt: '2024-06-18'
+summary: 'My second post on my new blog.'
 ---
 
 Psseio a Guimares
