--- a/content/hello-world.mdx
+++ b/content/hello-world.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Hello World"
-publishedAt: "2024-06-18"
-summary: "My first post on my new blog."
+title: 'Hello World'
+publishedAt: '2024-06-18'
+summary: 'My first post on my new blog.'
 ---
 
 Aqui colocaremos todos as nossas histórias e aventuras!
 
 ```jsx
-console.log("Hello World");
+console.log('Hello World');
 ```
