Added blog posts

--- a/content/guimaraes.mdx
+++ b/content/guimaraes.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Passeio a Cidade do Berço'
-publishedAt: '2024-06-18'
+title: 'Passeio à Cidade do Berço'
+publishedAt: '2024-08-11'
 summary: 'My second post on my new blog.'
 ---
 
-Psseio a Guimares
+Passeio a Guimares
