--- a/content/gaia.mdx
+++ b/content/gaia.mdx
@@ -2,6 +2,7 @@
 title: 'Como tudo começou'
 publishedAt: '2024-04-24'
 summary: 'Onde tudo começou'
+image: '/portfolio/portfolio-8.jpg'
 ---
 
 O nosso presidente Fábio Santos, entrou em contacto com Luís Maia e João Abreu, donos do tão adorado Ford Mustangs. Após umas trocas de mensagens, decidiu-se irmos os três jantar a Gaia e depois fazermos um mini passeio pela marginal. Como podem ver pela seguinte imagen:
