Add emailJs to Form

--- a/content/carsncans.mdx
+++ b/content/carsncans.mdx
@@ -2,6 +2,7 @@
 title: 'Evento Cars n Cans'
 publishedAt: '2024-06-30'
 summary: 'Evento na cidade de Gondomar'
+image: '/portfolio/portfolio-13.jpg'
 ---
 
 O clube foi convidado a participar no Cars n Cans. Fomos 9 Mustangs em comboio com, ajuda Polícia Municiapl de Gondomar até ao evento. No im do evento fomos almoçar à pizzaria S martinho, na zonma de entre os rios. Escusado será dizer que a nossa chegada foi em grande. E o evento incrível. Muito bom ambiente!
