--- a/content/guimaraes.mdx
+++ b/content/guimaraes.mdx
@@ -1,7 +1,8 @@
 ---
 title: 'Passeio à Cidade do Berço'
 publishedAt: '2024-08-11'
-summary: 'My second post on my new blog.'
+summary: 'Conquistamos Guimarães.'
+image: '/portfolio/portfolio-28.jpg'
 ---
 
 Passeio a Guimares
