--- a/content/viana_do_castelo.mdx
+++ b/content/viana_do_castelo.mdx
@@ -2,6 +2,7 @@
 title: 'Passeio à Cidade de Viana do Castelo'
 publishedAt: '2024-06-09'
 summary: 'A princesa chamava-se Ana daí o nome'
+image: '/portfolio/portfolio-10.jpg'
 ---
 
 O primeiro passeio oficial como clube Mustang Do Norte. O local escolhido foi Viana do Castelo. Fomos almoçar à Pousada Viana do Castelo com uma vista incrivel da cidade. No final do almoço passeamos pelo centro da cidade, visitamos o Forte da Areosa e fomos até a praia do Coral tirar uma fotos, aproveitar o belo dia.
