--- a/content/penafiel_racing_fest.mdx
+++ b/content/penafiel_racing_fest.mdx
@@ -2,6 +2,7 @@
 title: 'Evento Penafiel Racing Fest'
 publishedAt: '2024-06-16'
 summary: 'Convidados Especiais'
+image: '/portfolio/portfolio-21.jpg'
 ---
 
 O clube foi convidado a participar no [Penafiel Racing Fest](https://racingfest.pt/). Fomos 6 Mustangs almoçar ao restaurante Neto em Gondomar, depois fomos em comboio até ao evento. Escusado será dizer que a nossa chegada foi em grande. E o evento incrível. Recomendamos!
