--- a/content/guimaraes.mdx
+++ b/content/guimaraes.mdx
@@ -5,4 +5,5 @@ summary: 'Conquistamos Guimarães.'
 image: '/portfolio/portfolio-28.jpg'
 ---
 
-Passeio a Guimares
+Um grande passeio cheio de festa, boa disposição e mmuitos cavalos. Começamos por atacar logo a Penha, onde estacionamos todos no topo e tiramos umas belas fotos. Depois fomos almoçar ao restaurante quinta da Torre onde fomos excelentemente recebidos.
+Depois juntamente com a policia municipal de Guimaraes fizemos um passeio pelo centro da cidade, e pela zona histórica. Escusado será dizer que foi incrível! Bom tempo, pessoal incrivel, boas vistas, boa comida e grandes máquinas, que mais uma pessoa pode pedir!
