--- a/content/castelo_paiva.mdx
+++ b/content/castelo_paiva.mdx
@@ -5,8 +5,4 @@ summary: 'Primeiro Passeio Oficial do Clube'
 image: '/portfolio/portfolio-2.jpg'
 ---
 
-Primeiro passeio, ainda como um grupo de amigos, não como um clube ainda, foi neste passeio que tudo mudou. Neste Passeio, com, 5 mustangs, fizemos a marginal do Douro até ao Restaurante Típico Casa de São Pedro, em Castelo de Paiva. Onde fomos muito bem servidos e comemos lindamente. No final da almoiço visitamos o centro e acabamos no Foz Hotel Bar em Torrão para tomar um copo. O passeio acabou na marina do freixo, onde depois nos despedimos e cada um seguiu o seu caminho. Foi neste passeio, onde conhecemos Mauro Munoz, que nos ajudou na criação do clube tornando-se Vice Presidente.
-
-```jsx
-console.log('Hello World');
-```
+Primeiro passeio, ainda como um grupo de amigos, não como um clube ainda, foi neste passeio que tudo mudou. Neste Passeio, com, 5 mustangs, fizemos a marginal do Douro até ao Restaurante Típico Casa de São Pedro, em Castelo de Paiva. Onde fomos muito bem servidos e comemos lindamente. No final do almoço visitamos o centro e acabamos no Foz Hotel Bar em Torrão para tomar um copo. O passeio acabou na marina do freixo, onde depois nos despedimos e cada um seguiu o seu caminho. Foi neste passeio, onde conhecemos Mauro Munoz, que nos ajudou na criação do clube tornando-se Vice Presidente.
