--- a/content/caramulo.mdx
+++ b/content/caramulo.mdx
@@ -5,4 +5,4 @@ summary: 'Um evento com todo o tipo de carros!'
 image: '/portfolio/portfolio-29.jpg'
 ---
 
-Primeiro ano em que vamos ao Caramulo MotorFestival e foi incrível. Vimos todos os tipos de carros, fizemos a subida rampa. Foi íncrível!
+Primeiro ano em que vamos ao Caramulo MotorFestival e foi incrível. Vimos todos os tipos de carros, fizemos a subida da rampa. Foi íncrível!
