Fixed text castelo da paiva

--- a/content/castelo_paiva.mdx
+++ b/content/castelo_paiva.mdx
@@ -5,4 +5,4 @@ summary: 'Primeiro Passeio Oficial do Clube'
 image: '/portfolio/portfolio-2.jpg'
 ---
 
-Primeiro passeio, ainda como um grupo de amigos, não como um clube ainda, foi neste passeio que tudo mudou. Neste Passeio, com, 5 mustangs, fizemos a marginal do Douro até ao Restaurante Típico Casa de São Pedro, em Castelo de Paiva. Onde fomos muito bem servidos e comemos lindamente. No final do almoço visitamos o centro e acabamos no Foz Hotel Bar em Torrão para tomar um copo. O passeio acabou na marina do freixo, onde depois nos despedimos e cada um seguiu o seu caminho. Foi neste passeio, onde conhecemos Mauro Munoz, que nos ajudou na criação do clube tornando-se Vice Presidente.
+Foi neste primeiro passeio, ainda como um grupo de amigos, onde conhecemos Mauro Munoz pessoalmente (vindo a tornar-se mais tarde o Vice Presidente). Éramos 5 mustangs a fazer a marginal do Douro até ao Restaurante Típico Casa de São Pedro, em Castelo de Paiva, sítio onde fomos muito bem acolhidos e servidos. No final do almoço visítamos o centro da vila e seguimos para o Foz Hotel Bar no Torrão para dar de beber aos cavalos. Terminamos o nosso passeio na marina do freixo e fomos para casa com uma certeza que estes passeios não podiam ser só nossos. 
