Remove date counter nad fixed caramulo text

--- a/content/caramulo.mdx
+++ b/content/caramulo.mdx
@@ -5,4 +5,10 @@ summary: 'Um evento com todo o tipo de carros!'
 image: '/portfolio/portfolio-29.jpg'
 ---
 
-Primeiro ano em que vamos ao Caramulo MotorFestival e foi incrível. Vimos todos os tipos de carros, fizemos a subida da rampa. Foi íncrível!
+O Caramulo MotorFestival é um dos maiores e mais prestigiados eventos dedicados ao desporto motorizado em Portugal, reunindo uma vasta gama de veículos clássicos, desportivos e de competição. Este festival, que ocorre anualmente na serra do Caramulo, é um ponto de encontro obrigatório para entusiastas de carros e motos de todas as épocas, proporcionando um ambiente único onde a paixão pelo mundo automóvel se vive intensamente.
+
+Este ano, o Clube de Mustangs do Norte teve o privilégio de fazer parte deste evento extraordinário, marcando presença com uma impressionante coleção de Ford Mustangs, símbolo de performance e estilo americano. A participação do clube trouxe ainda mais brilho ao festival, destacando o legado e a potência dos Mustangs, carros icônicos que atraem gerações de admiradores pelo seu design inconfundível e ronco de motor característico.
+
+Durante o evento, os membros do clube puderam exibir os seus modelos de Mustang, trocar experiências e partilhar a paixão comum pelos automóveis. Além disso, os visitantes tiveram a oportunidade de ver de perto estas máquinas potentes, participar em passeios e provas na rampa do Caramulo, e assistir a demonstrações de condução que mostraram a capacidade e a emoção de dirigir um Mustang.
+
+A participação do Clube de Mustangs do Norte no Caramulo MotorFestival foi um verdadeiro sucesso, promovendo a camaradagem entre os membros e reforçando a presença do clube no cenário automotivo nacional. Para os amantes dos Mustangs e para os entusiastas de carros em geral, foi uma oportunidade única de celebrar o espírito de liberdade e potência que define esta marca icônica.
