--- a/content/gaia.mdx
+++ b/content/gaia.mdx
@@ -5,4 +5,4 @@ summary: 'Onde tudo começou'
 image: '/portfolio/portfolio-8.jpg'
 ---
 
-O nosso presidente Fábio Santos, entrou em contacto com Luís Maia e João Abreu, donos do tão adorado Ford Mustangs. Após umas trocas de mensagens, decidiu-se irmos os três jantar a Gaia e depois fazermos um mini passeio pela marginal. Como podem ver pela seguinte imagen:
+O nosso presidente, entrou em contacto com mais duas pessoas, donos do tão adorado Ford Mustangs. Após umas trocas de mensagens, decidiu-se irmos os três jantar a Gaia e depois fazermos um mini passeio pela marginal. Como podem ver pela seguinte imagen:
